feat(photos): ability to filter photos without album
