# open-api/immich-openapi-specs.json
@@ -5788,6 +5788,14 @@
             "schema": {
               "type": "boolean"
             }
+          },
+          {
+            "name": "withoutAlbum",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
@@ -5910,6 +5918,14 @@
           },
           {
             "name": "withStacked",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "withoutAlbum",
             "required": false,
             "in": "query",
             "schema": {
